--- a/index.html
+++ b/index.html
@@ -9,15 +9,84 @@
 </head>
 <body>
 <tw-story><noscript><tw-noscript>JavaScript needs to be enabled to play Digital Writing.</tw-noscript></noscript></tw-story>
-<tw-storydata name="Digital Writing" startnode="1" creator="Twine" creator-version="2.10.0" format="Harlowe" format-version="3.3.9" ifid="F9CD24CD-E8CA-4A9F-ADFC-1AFA582C2E95" options="" tags="" zoom="1" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css"></style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="The Tank" tags="" position="600,250" size="100,100">[[Intro]]</tw-passagedata><tw-passagedata pid="2" name="Intro" tags="" position="725,250" size="100,100">On the first night there is [[vomit]].</tw-passagedata><tw-passagedata pid="3" name="vomit" tags="" position="725,375" size="100,100">I dream of cats (click-replace: &quot;cats&quot;) [ and horses] (click-replace: &quot;horses&quot;) [ and turtles] 
+<tw-storydata name="Digital Writing" startnode="1" creator="Twine" creator-version="2.10.0" format="Harlowe" format-version="3.3.9" ifid="F9CD24CD-E8CA-4A9F-ADFC-1AFA582C2E95" options="" tags="" zoom="1" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css">@import url('https://fonts.googleapis.com/css2?family=Homemade+Apple&display=swap');
 
-(click-append: &quot;cats&quot;) [ and dogs] 
+tw-story {
+  font-family: 'Homemade Apple', cursive;
+  color: #800000;
+  background-color: #000;
+}
 
-(t8n-delay: 5s) + (t8n: &quot;fade-down&quot;) [etc]
+img {  
+  width: 100%;
+}
 
-&lt;img class=&quot;story-image&quot; src=&quot;./images/example.jpeg&quot; alt=&quot;italy&quot; /&gt;
+.story-image-smallest {  
+  width: 20;
+}
 
-</tw-passagedata></tw-storydata>
+.story-image-smaller {  /* this selects all elements with the story-image-smaller class not just images */
+  width: 50%;
+}
+
+.story-image-larger {  /* this selects all elements with the story-image-smaller class not just images */
+  width: 70%;
+}
+.story-image {
+  width: 50%;
+}
+
+tw-link, tw-link:link, tw-link:visited, tw-link.visited {
+  color: #FFF;
+  text-decoration: underline;
+}
+tw-link:focus, tw-link:hover, tw-link:active, tw-link.visited:hover {
+  color: #FFF;
+  text-decoration: none;
+}
+tw-passage {
+  padding-bottom: 200px;}
+.story-room {
+  display: grid;  /* sets the display to grid on the surrounding div */
+  grid-template-columns: 50% 50%;  /* sets each column to 50% */
+}
+.story-text {
+  grid-column: 1;  /* sets which column the text appears in */
+  grid-row: 1;
+  box-sizing: border-box;
+  padding: 10px;
+}
+.story-image {
+  grid-column: 2;  /* sets which column the image appears in */
+  grid-row: 1;
+}
+
+tw-story[tags~="example-background"] {  /* the tag added in step 2 */
+  background-image: url(./images/flapper.jpg);  /* the image added in step 1 */
+  background-size: cover;  /* cover the whole element */
+  background-repeat: no-repeat;  /* do not repeat the background image */
+}</style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="Intro" tags="" position="600,250" size="100,100">It’s late on a Saturday night, too late for you to be awake.
+
+“Tell us a story from when you were younger”, you say. 
+“There are no good stories from when I was young”, she replies.
+“We don’t want a good story Nonna, [[we want your story]]”.
+
+“Alright”, she says.
+
+You and your sister sit up in bed.
+
+</tw-passagedata><tw-passagedata pid="2" name="we want your story" tags="" position="600,375" size="100,100">When your Nonna and Nonno first came to Australia they lived inside a water tank with your Mum and older brother. Your Nonno worked on an orange farm picking fruit, and the farmer had no accommodation for them. One day, they saw the farmer throwing an old water tank into hard rubbish, and they asked him if they could save it. 
+
+The water tank was flipped upside down so the old floor became the new roof, and the new floor was empty, made of dirt. The farmer added a wood-stove so they could cook. 
+
+They slept on piles of clothes instead of a [[bed]]. Their luggage containing blankets from home was still making it’s journey across the pacific and hadn’t yet arrived. 
+
+No fridge to store food, they only ate shelf-staple food. On the one day your Nonno splashed out and bought meat, your Nonna ruined the dish because she couldn’t read English on the bottle labelled, ‘sweet and sour sauce’. 
+</tw-passagedata><tw-passagedata pid="3" name="bed" tags="" position="600,500" size="100,100">In your proper bedroom with the slated roof and the insulated walls, you could imagine many places better to live than a water tank.
+
+The bedroom that could fit the water tank inside of it maybe, (click-append: &quot;maybe&quot;)[[if you could measure the parameters]]
+ 
+</tw-passagedata><tw-passagedata pid="4" name="if you could measure the parameters" tags="" position="600,625" size="100,100">You walk the parameters of the story, graze your hand on the corrugated iron edges. </tw-passagedata></tw-storydata>
 <script title="Twine engine code" data-main="harlowe">(function(){"use strict";
 var require,define;!function(){var e={},r={};require=function(i){var n=e[i];return n&&(r[i]=n[1].apply(void 0,n[0].map(require)),e[i]=void 0),r[i]},(define=function(r,i,n){if("function"==typeof r)return r();e[r]=[i,n]}).amd=!0}();/*!
  * https://github.com/paulmillr/es6-shim
