--- a/index.html
+++ b/index.html
@@ -9,73 +9,75 @@
 </head>
 <body>
 <tw-story><noscript><tw-noscript>JavaScript needs to be enabled to play Digital Writing.</tw-noscript></noscript></tw-story>
-<tw-storydata name="Digital Writing" startnode="1" creator="Twine" creator-version="2.10.0" format="Harlowe" format-version="3.3.9" ifid="F9CD24CD-E8CA-4A9F-ADFC-1AFA582C2E95" options="" tags="" zoom="1" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css">@import url('https://fonts.googleapis.com/css2?family=Homemade+Apple&display=swap');
+<tw-storydata name="Digital Writing" startnode="1" creator="Twine" creator-version="2.10.0" format="Harlowe" format-version="3.3.9" ifid="F9CD24CD-E8CA-4A9F-ADFC-1AFA582C2E95" options="" tags="" zoom="1" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css">@font-face {
+  font-family: 'CabrionLight';
+  src: url('fonts/cabrion-light.otf') format('opentype');
+  font-weight: normal;
+  font-style: normal;
+}
 
 tw-story {
-  font-family: 'Homemade Apple', cursive;
-  color: #800000;
-  background-color: #000;
+  font-family: 'CabrionLight', sans-serif;
+  color: #3C3633;
+  background-color: #EEEDEB;
 }
 
-img {  
-  width: 100%;
-}
-
-.story-image-smallest {  
-  width: 20;
-}
-
-.story-image-smaller {  /* this selects all elements with the story-image-smaller class not just images */
-  width: 50%;
-}
-
-.story-image-larger {  /* this selects all elements with the story-image-smaller class not just images */
-  width: 70%;
-}
 .story-image {
-  width: 50%;
+  width: 100%;
+}
+tw-link,
+tw-link:link,
+tw-link:visited,
+tw-link.visited {
+  color: #3C3633;         
+  font-weight: bold;     
+  text-decoration: none;  
 }
 
-tw-link, tw-link:link, tw-link:visited, tw-link.visited {
-  color: #FFF;
-  text-decoration: underline;
+tw-link[click-append] {
+  color: #3C3633;         
+  font-weight: bold;     
+  text-decoration: none;
 }
-tw-link:focus, tw-link:hover, tw-link:active, tw-link.visited:hover {
-  color: #FFF;
-  text-decoration: none;
+
+tw-link:focus,
+tw-link:hover,
+tw-link:active,
+tw-link.visited:hover {
+  color: #3C3633;         
+  font-weight: bold;
+  text-decoration: none; 
 }
+
+
 tw-passage {
-  padding-bottom: 200px;}
-.story-room {
-  display: grid;  /* sets the display to grid on the surrounding div */
-  grid-template-columns: 50% 50%;  /* sets each column to 50% */
-}
-.story-text {
-  grid-column: 1;  /* sets which column the text appears in */
-  grid-row: 1;
-  box-sizing: border-box;
-  padding: 10px;
-}
-.story-image {
-  grid-column: 2;  /* sets which column the image appears in */
-  grid-row: 1;
+  padding-bottom: 200px;
 }
 
-tw-story[tags~="example-background"] {  /* the tag added in step 2 */
-  background-image: url(./images/flapper.jpg);  /* the image added in step 1 */
-  background-size: cover;  /* cover the whole element */
-  background-repeat: no-repeat;  /* do not repeat the background image */
-}</style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="Intro" tags="" position="600,250" size="100,100">It’s late on a Saturday night, too late for you to be awake.
 
-“Tell us a story from when you were younger”, you say. 
+@keyframes fadeOut {
+  from { opacity: 1; }
+  to { opacity: 0; }
+}
+
+.fadeOutSlow {
+  animation: fadeOut 3s ease forwards;
+}</style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="Intro" tags="" position="600,250" size="100,100">&lt;audio id=&quot;background-audio&quot; loop autoplay&gt;
+  &lt;source src=&quot;audio/Space8-NalaSinephro.mp3&quot; type=&quot;audio/mpeg&quot;&gt;
+  Your browser does not support the audio element.
+&lt;/audio&gt;
+
+It’s late on a Saturday night, too late for you to be awake.
+
+“Tell us a story from when you were younger”, you say.
+
 “There are no good stories from when I was young”, she replies.
+
 “We don’t want a good story Nonna, [[we want your story]]”.
 
 “Alright”, she says.
 
-You and your sister sit up in bed.
-
-</tw-passagedata><tw-passagedata pid="2" name="we want your story" tags="" position="600,375" size="100,100">When your Nonna and Nonno first came to Australia they lived inside a water tank with your Mum and older brother. Your Nonno worked on an orange farm picking fruit, and the farmer had no accommodation for them. One day, they saw the farmer throwing an old water tank into hard rubbish, and they asked him if they could save it. 
+You and your sister sit up in bed.</tw-passagedata><tw-passagedata pid="2" name="we want your story" tags="" position="600,375" size="100,100">When your Nonna and Nonno first came to Australia they lived inside a water tank with your Mum and older brother. Your Nonno worked on an orange farm picking fruit, and the farmer had no accommodation for them. One day, they saw the farmer throwing an old water tank into hard rubbish, and they asked him if they could save it. 
 
 The water tank was flipped upside down so the old floor became the new roof, and the new floor was empty, made of dirt. The farmer added a wood-stove so they could cook. 
 
@@ -84,9 +86,41 @@ They slept on piles of clothes instead of a [[bed]]. Their luggage containing bl
 No fridge to store food, they only ate shelf-staple food. On the one day your Nonno splashed out and bought meat, your Nonna ruined the dish because she couldn’t read English on the bottle labelled, ‘sweet and sour sauce’. 
 </tw-passagedata><tw-passagedata pid="3" name="bed" tags="" position="600,500" size="100,100">In your proper bedroom with the slated roof and the insulated walls, you could imagine many places better to live than a water tank.
 
-The bedroom that could fit the water tank inside of it maybe, (click-append: &quot;maybe&quot;)[[if you could measure the parameters]]
- 
-</tw-passagedata><tw-passagedata pid="4" name="if you could measure the parameters" tags="" position="600,625" size="100,100">You walk the parameters of the story, graze your hand on the corrugated iron edges. </tw-passagedata></tw-storydata>
+The bedroom that could fit the water tank inside of it maybe, 
+(click-append: &quot;maybe,&quot;)[ [[if you could measure the parameters.]] ]</tw-passagedata><tw-passagedata pid="4" name="Next Passage" tags="" position="600,750" size="100,100">
+/// 
+
+A ring-shaped mosquito bite on your finger greets you in the morning. 
+
+She wears a scarf tight around her skull as she washes the dishes. 
+
+You collect the clean laundry from the balcony rail.  
+
+Is it the heat or break from idling hands raised above the keyboard in contemplation that makes folding the clothes feel euphoric? 
+
+The sun reaches into the story through the splinters. The peeling paint. The half-laid kitchen tile causing depressions in the floor.  
+
+The tile trailing off, somewhere we are supposed to walk.
+
+///
+
+Your nonna tells you that your uncle nearly died of dehydration as a child.
+
+You carry a two-litre plastic bottle of water to every outing. They laugh at you.  
+
+You know how to say hot and Australian in dialect, you string a sentence together. 
+
+Everyone smiles.   
+</tw-passagedata><tw-passagedata pid="5" name="if you could measure the parameters." tags="" position="600,625" size="100,100">|fadeOut&gt;[&lt;span class=&quot;fade-target&quot;&gt;You walk the parameters of the story, graze your hand on the corrugated iron edges.&lt;/span&gt;]
+
+(after: 2s)[
+  (enchant: ?fadeOut, (css: &quot;animation: fadeOut 3s ease forwards;&quot;))
+]
+
+(after: 7s)[
+  (replace: ?fadeOut)[]
+  (goto: &quot;Next Passage&quot;)
+]</tw-passagedata></tw-storydata>
 <script title="Twine engine code" data-main="harlowe">(function(){"use strict";
 var require,define;!function(){var e={},r={};require=function(i){var n=e[i];return n&&(r[i]=n[1].apply(void 0,n[0].map(require)),e[i]=void 0),r[i]},(define=function(r,i,n){if("function"==typeof r)return r();e[r]=[i,n]}).amd=!0}();/*!
  * https://github.com/paulmillr/es6-shim
