--- a/The Tank/thetank.html
+++ b/The Tank/thetank.html
@@ -62,6 +62,77 @@ tw-passage {
 
 .fadeOutSlow {
   animation: fadeOut 3s ease forwards;
+}
+.big-brackets {
+  font-family: 'CabrionLight', sans-serif !important;
+  font-size: 6rem !important;
+  font-weight: bold !important;
+  text-align: center !important;
+  color: #3C3633 !important;
+  margin: 5rem 0 !important;
+  letter-spacing: 5rem; /* Space out the brackets */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
+
+.big-brackets::before {
+  content: "(";
+  position: absolute;
+  left: -5rem; /* Adjust horizontal position */
+  top: -2rem; /* Adjust vertical position */
+  font-size: 12rem; /* Make the parentheses large */
+  transform: scaleX(0.6); /* Make them thinner horizontally */
+  font-family: 'Arial', sans-serif; /* Change font to a thinner one for parentheses */
+}
+
+.big-brackets::after {
+  content: ")";
+  position: absolute;
+  right: -5rem; /* Adjust horizontal position */
+  bottom: -2rem; /* Adjust vertical position */
+  font-size: 12rem; /* Make the parentheses large */
+  transform: scaleX(0.6); /* Make them thinner horizontally */
+  font-family: 'Arial', sans-serif; /* Change font to a thinner one for parentheses */
+}
+
+.image-grid {
+  display: flex;
+  gap: 2rem;
+  max-width: 80%;
+  justify-content: center;
+  position: relative;
+}
+
+.image-grid div {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
+
+.reveal-text {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 1.5rem;
+  color: #3C3633;
+  opacity: 0;
+}
+
+.reveal-text.visible {
+  opacity: 1;
+}
+
+img {
+  width: 100%;
+  display: block;
+  max-width: 100%;
+  height: auto;
+  border-radius: 10px;
 }</style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="Intro" tags="" position="600,250" size="100,100">&lt;audio id=&quot;background-audio&quot; loop autoplay&gt;
   &lt;source src=&quot;audio/Space8-NalaSinephro.mp3&quot; type=&quot;audio/mpeg&quot;&gt;
   Your browser does not support the audio element.
@@ -87,7 +158,37 @@ No fridge to store food, they only ate shelf-staple food. On the one day your No
 </tw-passagedata><tw-passagedata pid="3" name="bed" tags="" position="600,500" size="100,100">In your proper bedroom with the slated roof and the insulated walls, you could imagine many places better to live than a water tank.
 
 The bedroom that could fit the water tank inside of it maybe, 
-(click-append: &quot;maybe,&quot;)[ [[if you could measure the parameters.]] ]</tw-passagedata><tw-passagedata pid="4" name="Next Passage" tags="" position="600,750" size="100,100">
+(click-append: &quot;maybe,&quot;)[ [[if you could measure the parameters.]] ]</tw-passagedata><tw-passagedata pid="4" name="Next Passage" tags="" position="600,750" size="100,100">(set: $revealA to false)
+(set: $revealB to false)
+
+&lt;div class=&quot;big-brackets&quot;&gt;
+  &lt;div class=&quot;image-grid&quot;&gt;
+    &lt;div&gt;
+      &lt;!-- Clickable Image to toggle reveal --&gt;
+      (click: ?imgA)[(set: $revealA to not $revealA)]
+&lt;img src=&quot;images/tapestry.jpeg&quot; alt=&quot;Tapestry&quot; style=&quot;width: 300px;&quot;&gt;
+      (if: $revealA)[
+        &lt;div class=&quot;reveal-text&quot;&gt;
+          a small fragment surfaces here
+        &lt;/div&gt;
+      ]
+    &lt;/div&gt;
+    &lt;div&gt;
+      &lt;!-- Clickable Image to toggle reveal --&gt;
+      (click: ?imgB)[(set: $revealB to not $revealB)]
+&lt;img src=&quot;images/italy.jpeg&quot; alt=&quot;Italy&quot; style=&quot;width: 300px;&quot;&gt;
+      &lt;!-- Reveal text when clicked --&gt;
+      (if: $revealB)[
+        &lt;div class=&quot;reveal-text&quot;&gt;
+          another thing we nearly forgot
+        &lt;/div&gt;
+      ]
+    &lt;/div&gt;
+  &lt;/div&gt;
+&lt;/div&gt;
+
+
+
 /// 
 
 A ring-shaped mosquito bite on your finger greets you in the morning. 
@@ -120,7 +221,52 @@ Everyone smiles.
 (after: 7s)[
   (replace: ?fadeOut)[]
   (goto: &quot;Next Passage&quot;)
-]</tw-passagedata></tw-storydata>
+]</tw-passagedata><tw-passagedata pid="6" name="Brackets with rotation" tags="" position="300,700" size="100,100">&lt;!-- Brackets with Rotation --&gt;
+&lt;div class=&quot;big-brackets&quot;&gt;
+  ( )
+&lt;/div&gt;
+
+&lt;div class=&quot;image-grid&quot;&gt;
+  &lt;!-- Image and reveal code here --&gt;
+&lt;/div&gt;
+
+&lt;style&gt;
+  .big-brackets {
+    font-family: &#39;CabrionLight&#39;, sans-serif !important;
+    font-size: 6rem !important;
+    font-weight: bold !important;
+    text-align: center !important;
+    color: #3C3633 !important;
+    margin: 5rem 0 !important;
+    letter-spacing: 5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+  }
+
+  .big-brackets::before {
+    content: &quot;(&quot;;
+    position: absolute;
+    left: -5rem;
+    top: -2rem;
+    font-size: 12rem;
+    transform: rotate(-10deg); /* Rotation effect */
+  }
+
+  .big-brackets::after {
+    content: &quot;)&quot;;
+    position: absolute;
+    right: -5rem;
+    bottom: -2rem;
+    font-size: 12rem;
+    transform: rotate(10deg); /* Rotation effect */
+  }
+
+  /* Other styling for image grid, etc. */
+&lt;/style&gt;
+</tw-passagedata><tw-passagedata pid="7" name="Image test" tags="" position="725,750" size="100,100">&lt;img class=&quot;story-image&quot; src=&quot;./images/italy.jpeg&quot; alt=&quot;italy&quot; /&gt;
+</tw-passagedata></tw-storydata>
 <script title="Twine engine code" data-main="harlowe">(function(){"use strict";
 var require,define;!function(){var e={},r={};require=function(i){var n=e[i];return n&&(r[i]=n[1].apply(void 0,n[0].map(require)),e[i]=void 0),r[i]},(define=function(r,i,n){if("function"==typeof r)return r();e[r]=[i,n]}).amd=!0}();/*!
  * https://github.com/paulmillr/es6-shim
