--- a/The Tank/thetank.html
+++ b/The Tank/thetank.html
@@ -63,77 +63,120 @@ tw-passage {
 .fadeOutSlow {
   animation: fadeOut 3s ease forwards;
 }
+
 .big-brackets {
-  font-family: 'CabrionLight', sans-serif !important;
-  font-size: 6rem !important;
-  font-weight: bold !important;
-  text-align: center !important;
-  color: #3C3633 !important;
-  margin: 5rem 0 !important;
-  letter-spacing: 5rem; /* Space out the brackets */
+  font-family: 'CabrionLight', sans-serif;
+  font-size: 1rem;
+  color: #3C3633;
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
   position: relative;
+  flex-direction: column;
+  padding: 0.5rem;
+  width: 95%;
+  margin: 1rem auto 2rem auto; /* less top margin */
+  text-align: left;
+  min-height: 30rem;
 }
 
 .big-brackets::before {
   content: "(";
   position: absolute;
-  left: -5rem; /* Adjust horizontal position */
-  top: -2rem; /* Adjust vertical position */
-  font-size: 12rem; /* Make the parentheses large */
-  transform: scaleX(0.6); /* Make them thinner horizontally */
-  font-family: 'Arial', sans-serif; /* Change font to a thinner one for parentheses */
+  left: -6rem;  /* pushed further left */
+  top: 0rem;
+  font-size: 8rem;
+  transform: scaleX(0.6);
+  font-family: 'Arial', sans-serif;
 }
 
 .big-brackets::after {
   content: ")";
   position: absolute;
-  right: -5rem; /* Adjust horizontal position */
-  bottom: -2rem; /* Adjust vertical position */
-  font-size: 12rem; /* Make the parentheses large */
-  transform: scaleX(0.6); /* Make them thinner horizontally */
-  font-family: 'Arial', sans-serif; /* Change font to a thinner one for parentheses */
+  right: -6rem;  /* pushed further right */
+  bottom: -1rem;
+  font-size: 8rem;
+  transform: scaleX(0.6);
+  font-family: 'Arial', sans-serif;
 }
 
-.image-grid {
-  display: flex;
-  gap: 2rem;
-  max-width: 80%;
-  justify-content: center;
-  position: relative;
-}
-
-.image-grid div {
-  flex: 1;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: relative;
-}
-
-.reveal-text {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  font-size: 1.5rem;
+.line {
+  font-size: 0.9rem;
   color: #3C3633;
-  opacity: 0;
+  font-family: 'CabrionLight', sans-serif;
+  margin: 0;
+  line-height: 1.4;
+  text-align: left;
 }
 
-.reveal-text.visible {
-  opacity: 1;
+.line-1 {
+  align-self: flex-start;
+  margin-top: 1rem;
+  margin-left: 2rem;
+  max-width: 70%;
 }
 
-img {
-  width: 100%;
-  display: block;
-  max-width: 100%;
-  height: auto;
-  border-radius: 10px;
-}</style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="Intro" tags="" position="600,250" size="100,100">&lt;audio id=&quot;background-audio&quot; loop autoplay&gt;
+.line-2 {
+  align-self: flex-end;
+  margin-top: 2.5rem;
+  margin-right: 3rem;
+  max-width: 65%;
+}
+
+.line-3 {
+  align-self: flex-start;
+  margin-top: 1.5rem;
+  margin-left: 4rem;
+  max-width: 60%;
+}
+
+.line-4 {
+  align-self: flex-end;
+  margin-top: 3rem;
+  margin-right: 2rem;
+  max-width: 75%;
+}
+
+.line-5 {
+  align-self: flex-start;
+  margin-top: 2rem;
+  margin-left: 1rem;
+  max-width: 65%;
+}
+
+.line-6 {
+  align-self: flex-end;
+  margin-top: 2.5rem;
+  margin-right: 2.5rem;
+  max-width: 70%;
+}
+.dynamic-text {
+  font-family: 'CabrionLight', sans-serif;
+  font-size: 1rem;
+  color: #3C3633;
+  position: relative;
+  padding: 1rem;
+  margin: 0;
+}
+
+.line-1 {
+  margin-left: 10%;  /* Adjusted to shift right */
+}
+
+.line-2 {
+  margin-left: 15%;  /* Adjusted to shift more right */
+}
+
+.line-3 {
+  margin-left: 5%;  /* Slight shift */
+}
+
+.line-4 {
+  margin-left: 20%;  /* Further right shift for dynamic look */
+}
+
+/* Adjust these values incrementally for more varied alignment */
+</style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="Intro" tags="" position="600,250" size="100,100">&lt;audio id=&quot;background-audio&quot; loop autoplay&gt;
   &lt;source src=&quot;audio/Space8-NalaSinephro.mp3&quot; type=&quot;audio/mpeg&quot;&gt;
   Your browser does not support the audio element.
 &lt;/audio&gt;
@@ -158,61 +201,7 @@ No fridge to store food, they only ate shelf-staple food. On the one day your No
 </tw-passagedata><tw-passagedata pid="3" name="bed" tags="" position="600,500" size="100,100">In your proper bedroom with the slated roof and the insulated walls, you could imagine many places better to live than a water tank.
 
 The bedroom that could fit the water tank inside of it maybe, 
-(click-append: &quot;maybe,&quot;)[ [[if you could measure the parameters.]] ]</tw-passagedata><tw-passagedata pid="4" name="Next Passage" tags="" position="600,750" size="100,100">(set: $revealA to false)
-(set: $revealB to false)
-
-&lt;div class=&quot;big-brackets&quot;&gt;
-  &lt;div class=&quot;image-grid&quot;&gt;
-    &lt;div&gt;
-      &lt;!-- Clickable Image to toggle reveal --&gt;
-      (click: ?imgA)[(set: $revealA to not $revealA)]
-&lt;img src=&quot;images/tapestry.jpeg&quot; alt=&quot;Tapestry&quot; style=&quot;width: 300px;&quot;&gt;
-      (if: $revealA)[
-        &lt;div class=&quot;reveal-text&quot;&gt;
-          a small fragment surfaces here
-        &lt;/div&gt;
-      ]
-    &lt;/div&gt;
-    &lt;div&gt;
-      &lt;!-- Clickable Image to toggle reveal --&gt;
-      (click: ?imgB)[(set: $revealB to not $revealB)]
-&lt;img src=&quot;images/italy.jpeg&quot; alt=&quot;Italy&quot; style=&quot;width: 300px;&quot;&gt;
-      &lt;!-- Reveal text when clicked --&gt;
-      (if: $revealB)[
-        &lt;div class=&quot;reveal-text&quot;&gt;
-          another thing we nearly forgot
-        &lt;/div&gt;
-      ]
-    &lt;/div&gt;
-  &lt;/div&gt;
-&lt;/div&gt;
-
-
-
-/// 
-
-A ring-shaped mosquito bite on your finger greets you in the morning. 
-
-She wears a scarf tight around her skull as she washes the dishes. 
-
-You collect the clean laundry from the balcony rail.  
-
-Is it the heat or break from idling hands raised above the keyboard in contemplation that makes folding the clothes feel euphoric? 
-
-The sun reaches into the story through the splinters. The peeling paint. The half-laid kitchen tile causing depressions in the floor.  
-
-The tile trailing off, somewhere we are supposed to walk.
-
-///
-
-Your nonna tells you that your uncle nearly died of dehydration as a child.
-
-You carry a two-litre plastic bottle of water to every outing. They laugh at you.  
-
-You know how to say hot and Australian in dialect, you string a sentence together. 
-
-Everyone smiles.   
-</tw-passagedata><tw-passagedata pid="5" name="if you could measure the parameters." tags="" position="600,625" size="100,100">|fadeOut&gt;[&lt;span class=&quot;fade-target&quot;&gt;You walk the parameters of the story, graze your hand on the corrugated iron edges.&lt;/span&gt;]
+(click-append: &quot;maybe,&quot;)[ [[if you could measure the parameters.]] ]</tw-passagedata><tw-passagedata pid="4" name="if you could measure the parameters." tags="" position="600,625" size="100,100">|fadeOut&gt;[&lt;span class=&quot;fade-target&quot;&gt;You walk the parameters of the story, graze your hand on the corrugated iron edges.&lt;/span&gt;]
 
 (after: 2s)[
   (enchant: ?fadeOut, (css: &quot;animation: fadeOut 3s ease forwards;&quot;))
@@ -221,7 +210,7 @@ Everyone smiles.
 (after: 7s)[
   (replace: ?fadeOut)[]
   (goto: &quot;Next Passage&quot;)
-]</tw-passagedata><tw-passagedata pid="6" name="Brackets with rotation" tags="" position="300,700" size="100,100">&lt;!-- Brackets with Rotation --&gt;
+]</tw-passagedata><tw-passagedata pid="5" name="Brackets with rotation" tags="" position="300,700" size="100,100">&lt;!-- Brackets with Rotation --&gt;
 &lt;div class=&quot;big-brackets&quot;&gt;
   ( )
 &lt;/div&gt;
@@ -265,8 +254,17 @@ Everyone smiles.
 
   /* Other styling for image grid, etc. */
 &lt;/style&gt;
-</tw-passagedata><tw-passagedata pid="7" name="Image test" tags="" position="725,750" size="100,100">&lt;img class=&quot;story-image&quot; src=&quot;./images/italy.jpeg&quot; alt=&quot;italy&quot; /&gt;
-</tw-passagedata></tw-storydata>
+</tw-passagedata><tw-passagedata pid="6" name="Image test" tags="" position="725,750" size="100,100">&lt;img class=&quot;story-image&quot; src=&quot;./images/italy.jpeg&quot; alt=&quot;italy&quot; /&gt;
+</tw-passagedata><tw-passagedata pid="7" name="Next Passage" tags="" position="600,750" size="100,100">&lt;div class=&quot;big-brackets&quot;&gt;
+  &lt;div class=&quot;dynamic-text&quot;&gt;
+    &lt;p class=&quot;line line-1&quot;&gt;A ring-shaped mosquito bite on your finger greets you in the morning.&lt;/p&gt;
+    &lt;p class=&quot;line line-2&quot;&gt;She wears a scarf tight around her skull as she washes the dishes.&lt;/p&gt;
+    &lt;p class=&quot;line line-3&quot;&gt;You collect the clean laundry from the balcony rail.&lt;/p&gt;
+    &lt;p class=&quot;line line-4&quot;&gt;Is it the heat or break from idling hands raised above the keyboard in contemplation that makes folding the clothes feel euphoric?&lt;/p&gt;
+    &lt;p class=&quot;line line-5&quot;&gt;The sun reaches into the story through the splinters. The peeling paint. The half-laid kitchen tile causing depressions in the floor.&lt;/p&gt;
+    &lt;p class=&quot;line line-6&quot;&gt;The tile trailing off, somewhere we are supposed to walk.&lt;/p&gt;
+  &lt;/div&gt;
+&lt;/div&gt;</tw-passagedata></tw-storydata>
 <script title="Twine engine code" data-main="harlowe">(function(){"use strict";
 var require,define;!function(){var e={},r={};require=function(i){var n=e[i];return n&&(r[i]=n[1].apply(void 0,n[0].map(require)),e[i]=void 0),r[i]},(define=function(r,i,n){if("function"==typeof r)return r();e[r]=[i,n]}).amd=!0}();/*!
  * https://github.com/paulmillr/es6-shim
