--- a/The Tank/thetank.html
+++ b/The Tank/thetank.html
@@ -208,6 +208,10 @@ tw-passage {
 tw-passage {
   padding-bottom: 200px; /* Extra room for content at the bottom */
   overflow: auto; /* Allow scrolling if content overflows */
+}
+
+tw-story[tags~="background1"] {
+  background: url('images/italy.jpg') center center / cover no-repeat fixed;
 }</style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="Intro" tags="" position="600,250" size="100,100">&lt;audio id=&quot;background-audio&quot; loop autoplay&gt;
   &lt;source src=&quot;audio/Space8-NalaSinephro.mp3&quot; type=&quot;audio/mpeg&quot;&gt;
   Your browser does not support the audio element.
@@ -286,7 +290,7 @@ The bedroom that could fit the water tank inside of it maybe,
 
   /* Other styling for image grid, etc. */
 &lt;/style&gt;
-</tw-passagedata><tw-passagedata pid="6" name="Image test" tags="" position="150,700" size="100,100">&lt;img class=&quot;story-image&quot; src=&quot;./images/italy.jpeg&quot; alt=&quot;italy&quot; /&gt;
+</tw-passagedata><tw-passagedata pid="6" name="Image test" tags="background1" position="150,700" size="100,100">
 </tw-passagedata><tw-passagedata pid="7" name="Next Passage" tags="" position="600,750" size="100,100">&lt;div class=&quot;big-brackets&quot;&gt;
   &lt;div class=&quot;dynamic-text&quot;&gt;
     &lt;p class=&quot;line line-1&quot;&gt;A ring-shaped mosquito bite on your finger greets you in the morning.&lt;/p&gt;
