--- a/The Tank/thetank.html
+++ b/The Tank/thetank.html
@@ -211,7 +211,7 @@ tw-passage {
 }
 
 tw-story[tags~="background1"] {
-  background: url('images/italy.jpg') center center / cover no-repeat fixed;
+  background: url('images/tapestry.jpg') center center / cover no-repeat fixed;
 }</style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="Intro" tags="" position="600,250" size="100,100">&lt;audio id=&quot;background-audio&quot; loop autoplay&gt;
   &lt;source src=&quot;audio/Space8-NalaSinephro.mp3&quot; type=&quot;audio/mpeg&quot;&gt;
   Your browser does not support the audio element.
