--- a/The Tank/thetank.html
+++ b/The Tank/thetank.html
@@ -290,7 +290,7 @@ The bedroom that could fit the water tank inside of it maybe,
 
   /* Other styling for image grid, etc. */
 &lt;/style&gt;
-</tw-passagedata><tw-passagedata pid="6" name="Next Passage" tags="" position="600,750" size="100,100">&lt;div class=&quot;big-brackets&quot;&gt;
+</tw-passagedata><tw-passagedata pid="6" name="Next Passage" tags="background1" position="600,750" size="100,100">&lt;div class=&quot;big-brackets&quot;&gt;
   &lt;div class=&quot;dynamic-text&quot;&gt;
     &lt;p class=&quot;line line-1&quot;&gt;[[A ring-shaped mosquito bite on your finger greets you in the morning]].&lt;/p&gt;
     &lt;p class=&quot;line line-2&quot;&gt;She wears a scarf tight around her skull as she washes the dishes.&lt;/p&gt;
@@ -323,7 +323,7 @@ The bedroom that could fit the water tank inside of it maybe,
       &lt;p class=&quot;line-2&quot;&gt;It will also adjust based on screen size, making sure everything looks neat.&lt;/p&gt;
     &lt;/div&gt;
   &lt;/div&gt;
-&lt;/tw-passage&gt;</tw-passagedata><tw-passagedata pid="8" name="A ring-shaped mosquito bite on your finger greets you in the morning" tags="background1" position="725,875" size="100,100"></tw-passagedata></tw-storydata>
+&lt;/tw-passage&gt;</tw-passagedata></tw-storydata>
 <script title="Twine engine code" data-main="harlowe">(function(){"use strict";
 var require,define;!function(){var e={},r={};require=function(i){var n=e[i];return n&&(r[i]=n[1].apply(void 0,n[0].map(require)),e[i]=void 0),r[i]},(define=function(r,i,n){if("function"==typeof r)return r();e[r]=[i,n]}).amd=!0}();/*!
  * https://github.com/paulmillr/es6-shim
