--- a/The Tank/thetank.html
+++ b/The Tank/thetank.html
@@ -252,10 +252,9 @@ It’s late on a Saturday night, too late for you to be awake.
 
 “Alright”, she says.
 
-You and your sister sit up in bed.</tw-passagedata><tw-passagedata pid="2" name="we want your story" tags="" position="600,375" size="100,100">&lt;div style=&quot;display: flex; gap: 2rem; align-items: flex-start;&quot;&gt;
-  &lt;img src=&quot;images/nonna-nonno-tank.jpg&quot; style=&quot;width: 40%; height: auto; border-radius: 10px;&quot; /&gt;
-
-  &lt;div style=&quot;flex: 1; font-size: 1.1rem;&quot;&gt;
+You and your sister sit up in bed.</tw-passagedata><tw-passagedata pid="2" name="we want your story" tags="" position="600,375" size="100,100">&lt;div class=&quot;image-text-container&quot;&gt;
+  &lt;img src=&quot;images/nonna-nonno-tank.jpg&quot; alt=&quot;Old water tank&quot; class=&quot;side-image&quot; /&gt;
+  &lt;div class=&quot;text-block&quot;&gt;
     &lt;p&gt;When your Nonna and Nonno first came to Australia they lived inside a water tank with your Mum and older brother. Your Nonno worked on an orange farm picking fruit, and the farmer had no accommodation for them. One day, they saw the farmer throwing an old water tank into hard rubbish, and they asked him if they could save it.&lt;/p&gt;
 
     &lt;p&gt;The water tank was flipped upside down so the old floor became the new roof, and the new floor was empty, made of dirt. The farmer added a wood-stove so they could cook.&lt;/p&gt;
