--- a/The Tank/thetank.html
+++ b/The Tank/thetank.html
@@ -221,15 +221,17 @@ tw-story[tags~="background1"] {
   padding: 1rem;
   max-width: 90%;
   margin: 2rem auto;
-  flex-wrap: wrap; /* Allows stacking on smaller screens */
+  flex-wrap: wrap; 
 }
 
-.side-image {
-  width: 300px;
-  max-width: 100%;
+.story-image {
+  width: 100%;
+  max-width: 900px;     
+  height: auto;         
+  object-fit: contain; 
   border-radius: 10px;
-  object-fit: cover;
-  flex-shrink: 0;
+  display: block;
+  margin: 2rem auto;    
 }
 
 .text-block {
