--- a/The Tank/thetank.html
+++ b/The Tank/thetank.html
@@ -215,23 +215,20 @@ tw-story[tags~="background1"] {
 }
 .image-text-container {
   display: flex;
-  flex-direction: row;
   align-items: flex-start;
   gap: 2rem;
   padding: 1rem;
   max-width: 90%;
   margin: 2rem auto;
-  flex-wrap: wrap; 
+  flex-wrap: wrap;
 }
 
-.story-image {
-  width: 100%;
-  max-width: 900px;     
-  height: auto;         
-  object-fit: contain; 
-  border-radius: 10px;
-  display: block;
-  margin: 2rem auto;    
+.side-image {
+  width: 400px;           
+  height: auto;          
+  border-radius: 10px;    
+  object-fit: cover;      
+  flex-shrink: 0;
 }
 
 .text-block {
