--- a/The Tank/thetank.html
+++ b/The Tank/thetank.html
@@ -225,12 +225,13 @@ tw-story[tags~="background1"] {
 }
 
 .side-image {
-  width: 250px;  
+  width: 300px;  
   max-width: 100%;
   border-radius: 10px;
   object-fit: cover;
   flex-shrink: 0;
-  margin-left: -50px; 
+  margin-left: -50px;  
+  margin-top: 20px; 
 }
 
 .text-block {
