--- a/The Tank/thetank.html
+++ b/The Tank/thetank.html
@@ -349,9 +349,17 @@ The bedroom that could fit the water tank inside of it maybe,
       &lt;p class=&quot;line-2&quot;&gt;It will also adjust based on screen size, making sure everything looks neat.&lt;/p&gt;
     &lt;/div&gt;
   &lt;/div&gt;
-&lt;/tw-passage&gt;</tw-passagedata><tw-passagedata pid="8" name="they asked him if they could save it" tags="" position="600,350" size="100,100">    &lt;p&gt;The water tank was flipped upside down so the old floor became the new roof, and the new floor was empty, made of dirt. The farmer added a wood-stove so they could cook.&lt;/p&gt;
-
+&lt;/tw-passage&gt;</tw-passagedata><tw-passagedata pid="8" name="they asked him if they could save it" tags="" position="600,350" size="100,100">&lt;div class=&quot;image-text-container&quot;&gt;
+  &lt;img src=&quot;images/tankfire.jpg&quot; alt=&quot;Old water tank&quot; class=&quot;side-image&quot; /&gt;
+  &lt;div class=&quot;text-block&quot;&gt;
+  &lt;p&gt;The water tank was flipped upside down so the old floor became the new roof, and the new floor was empty, made of dirt. [[The farmer added a wood-stove]] so they could cook.&lt;/p&gt;
+  &lt;/div&gt;
+&lt;/div&gt;</tw-passagedata><tw-passagedata pid="9" name="The farmer added a wood-stove" tags="" position="725,475" size="100,100">&lt;div class=&quot;image-text-container&quot;&gt;
+  &lt;img src=&quot;images/tank.jpg&quot; alt=&quot;Old water tank&quot; class=&quot;side-image&quot; /&gt;
+  &lt;div class=&quot;text-block&quot;&gt;
     &lt;p&gt;They slept on piles of clothes instead of a [[bed]]. Their luggage containing blankets from home was still making its journey across the Pacific and hadn’t yet arrived.&lt;/p&gt;
+  &lt;/div&gt;
+&lt;/div&gt;
 
     &lt;p&gt;No fridge to store food, they only ate shelf-staple food. On the one day your Nonno splashed out and bought meat, your Nonna ruined the dish because she couldn’t read English on the bottle labelled, ‘sweet and sour sauce’.&lt;/p&gt;
     </tw-passagedata></tw-storydata>
