--- a/The Tank/thetank.html
+++ b/The Tank/thetank.html
@@ -260,6 +260,11 @@ tw-link[click-append] {
 tw-link[click-append]:hover {
   color: #3C3633 !important; 
   text-decoration: none !important; 
+}
+tw-sidebar {
+  display: block !important;
+  visibility: visible !important;
+  opacity: 1 !important;
 }</style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="Intro" tags="" position="600,100" size="100,100">&lt;audio id=&quot;background-audio&quot; loop autoplay&gt;
   &lt;source src=&quot;audio/Space8-NalaSinephro.mp3&quot; type=&quot;audio/mpeg&quot;&gt;
   Your browser does not support the audio element.
