--- a/The Tank/thetank.html
+++ b/The Tank/thetank.html
@@ -352,19 +352,19 @@ The bedroom that could fit the water tank inside of it maybe,
   &lt;div class=&quot;dynamic-text&quot;&gt;
     &lt;p class=&quot;line line-1&quot;&gt;[[A ring-shaped mosquito bite on your finger greets you in the morning]].&lt;/p&gt;
     
-    &lt;img src=&quot;images/mosquito.jpg&quot; class=&quot;inter-text-image&quot;&gt;
+    &lt;img src=&quot;images/cross.jpg&quot; class=&quot;inter-text-image&quot;&gt;
 
     &lt;p class=&quot;line line-2&quot;&gt;She wears a scarf tight around her skull as she washes the dishes.&lt;/p&gt;
 
     &lt;p class=&quot;line line-3&quot;&gt;You collect the clean laundry from the balcony rail.&lt;/p&gt;
 
-    &lt;img src=&quot;images/laundry.jpg&quot; class=&quot;inter-text-image&quot;&gt;
+    &lt;img src=&quot;images/sky.jpg&quot; class=&quot;inter-text-image&quot;&gt;
 
     &lt;p class=&quot;line line-4&quot;&gt;Is it the heat or break from idling hands raised above the keyboard in contemplation that makes folding the clothes feel euphoric?&lt;/p&gt;
 
     &lt;p class=&quot;line line-5&quot;&gt;The sun reaches into the story through the splinters. The peeling paint. The half-laid kitchen tile causing depressions in the floor.&lt;/p&gt;
 
-    &lt;img src=&quot;images/kitchen-tile.jpg&quot; class=&quot;inter-text-image&quot;&gt;
+    &lt;img src=&quot;images/mum.jpg&quot; class=&quot;inter-text-image&quot;&gt;
 
     &lt;p class=&quot;line line-6&quot;&gt;The tile trailing off, somewhere we are supposed to walk.&lt;/p&gt;
   &lt;/div&gt;
